--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -83,8 +83,8 @@
 
             resultDiv.innerHTML = infoBox + '⏳ Checking email address in official volunteer database...';
 
-            // API URL - UPDATE THIS WITH YOUR DEPLOYMENT URL
-            const apiUrl = "https://script.google.com/macros/s/AKfycbzLDAEJpj7_JV_bat7PaMhdLtX_YgE2KjhVQY1WCYWQBBiIbQAKpLty0hdAOnX4hcA/exec";
+            // ✅ YOUR CORRECT API URL
+            const apiUrl = "https://script.google.com/macros/s/AKfycbz0FkcYV_Wkt5Iv1BKzJw6KXIoqXgfyBPDfAVRlLjsJbZ1Iq9eqX-hT5EEkTJGxNgfs5w/exec";
             
             try {
                 const currentUrl = window.location.href;
