--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -55,8 +55,8 @@
 
     // 🔗 Easy-to-edit links
 
-    const apiUrl = "https://script.google.com/macros/s/AKfycbz0FkcYV_Wkt5Iv1BKzJw6KXIoqXgfyBPDfAVRlLjsJbZ1Iq9eqX-hT5EEkTJGxNgfs5w/exec";
-    //old one
+    const apiUrl = "https://script.google.com/macros/s/AKfycbw8KAqiULOrPefzNs1XRo-PdeJNfDaTYBiVL5jEoL435PeStgoxKmk6_auoH7jnx2Aw5w/exec";
+    //old one          https://script.google.com/macros/s/AKfycbzLDAEJpj7_JV_bat7PaMhdLtX_YgE2KjhVQY1WCYWQBBiIbQAKpLty0hdAOnX4hcA/exec
     // const apiUrl = "https://script.google.com/macros/s/AKfycbzLDAEJpj7_JV_bat7PaMhdLtX_YgE2KjhVQY1WCYWQBBiIbQAKpLty0hdAOnX4hcA/exec";
    
     const hack1RegistrationLink = "https://codecrunchglobal.vercel.app/hack1-register"; // <-- replace with your real link
