--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -114,6 +114,11 @@
           <p>Access or verify volunteer participation certificates.</p>
           <a href="#" id="link-cert" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
+          <div class="res-card res-locked" id="card-expo">
+          <h3><i class="fa-solid fa-file-lines"></i> Event Registration Forms <span class="lock">🔒</span></h3>
+          <p>Hack and Event registration forms.</p>
+          <a href="#" id="link-expo" target="_blank" rel="noopener" aria-disabled="true">Open</a>
+        </div>
         <div class="res-card res-locked" id="card-resp">
           <h3><i class="fa-solid fa-table-list"></i> Event Registration Response Sheet <span class="lock">🔒</span></h3>
           <p>Review registration responses compiled from the event form.</p>
@@ -121,14 +126,10 @@
         </div>
         <div class="res-card res-locked" id="card-eval">
           <h3><i class="fa-solid fa-clipboard-check"></i> Hackathon Evaluation <span class="lock">🔒</span></h3>
-          <p>Judging rubrics, score sheets, and feedback submissions.</p>
+          <p>Judging evaluation forms [Access granted only to volunteers registered by each event]</p>
           <a href="#" id="link-eval" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
-        <div class="res-card res-locked" id="card-expo">
-          <h3><i class="fa-solid fa-file-lines"></i> Expo & Forms <span class="lock">🔒</span></h3>
-          <p>Expo schedules, check-in, and all operational forms.</p>
-          <a href="#" id="link-expo" target="_blank" rel="noopener" aria-disabled="true">Open</a>
-        </div>
+
       </div>
     </section>
   </main>
