--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -73,18 +73,19 @@
     <section class="header">
       <h1>Volunteer Login</h1>
       <p>
-        Enter the email you used to register. We’ll check it against the volunteer list.
-        <br><br>
+         <p class="subtitle">Use the same email you confirmed with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
+        <!-- <br><br>
         • Direct links to join Discord and verify private-channel access
         <br>
-        <strong>Hack & Club Volunteer Login</strong>
+        <strong>Hack & Club Volunteer Login</strong> -->
       </p>
+       
     </section>
 
     <!-- Login -->
     <section class="surface" id="volunteer-login">
-      <h2 class="title">Check Your Status</h2>
-      <p class="subtitle">Use the same email you confirmed with on <strong>Form No. 2</strong>.</p>
+      <!-- <h2 class="title">Check Your Status</h2> -->
+      <!-- <p class="subtitle">Use the same email you confirmed with on <strong>Form No. 2</strong>.</p> -->
 
       <div class="helper">
         <strong>Accepted Volunteers Only:</strong> Access is restricted to current volunteers who have been accepted and completed Form No. 2.
@@ -95,12 +96,19 @@
         <button class="btn btn-primary" onclick="checkOfficialVolunteerStatus()">Sign In</button>
       </div>
 
-      <div id="result">
-        <div class="info-box">
-          <strong>📋 What you'll see if confirmed:</strong><br/>
-          • Direct links to join Discord and verify private-channel access<br/>
-          • Your confirmed role + Form-2 timestamp
-        </div>
+            <div id="result">
+            <div class="info-box">
+                <strong>📋 What you'll have access to:</strong><br/>
+                • Link to join the official Discord server<br/>
+                • Steps to access the private volunteer channel<br/>
+                • Direct link to verify access to the private volunteer channel (all communications and updates are handled here)<br/>
+                • Event registration forms (all volunteers)<br/>
+                • Event registration response sheet (all volunteers)<br/>
+                • Hackathon judge evaluation forms (access available only to registered volunteers)<br/>
+                • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties)
+            </div>
+            </div>
+
         Awaiting email…
       </div>
     </section>
