--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -9,12 +9,26 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Google Sans','Roboto',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#f8f9fa;color:#202124;min-height:100vh}
+    /* NAV */
     .navbar{background:#fff;border-bottom:1px solid #e8eaed;padding:12px 0;position:sticky;top:0;z-index:100}
     .nav-container{max-width:1100px;margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
     .nav-brand a{color:#4285f4;text-decoration:none;font-size:22px;font-weight:600}
-    .nav-links{display:flex;gap:20px}
+    .nav-links{display:flex;gap:20px;flex-wrap:wrap}
     .nav-link{color:#5f6368;text-decoration:none;font-size:14px;padding:8px 12px;border-radius:6px}
     .nav-link:hover{background:#f1f3f4;color:#1a73e8}
+
+    /* Timezone band */
+    .timezone-section{background:#ffffff;border-bottom:1px solid #e8eaed;padding:24px 20px;margin-bottom:24px}
+    .timezone-header{text-align:center;margin-bottom:18px}
+    .timezone-header h2{color:#202124;font-size:24px;font-weight:600}
+    .timezone-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:14px;max-width:1100px;margin:0 auto}
+    .timezone-item{background:#ffffff;border:1px solid #dadce0;border-radius:8px;padding:14px;text-align:center;transition:all .2s ease}
+    .timezone-item:hover{box-shadow:0 1px 6px rgba(32,33,36,.28)}
+    .timezone-flag{font-size:18px;margin-bottom:6px}
+    .timezone-time{font-size:16px;font-weight:600;color:#1a73e8;margin-bottom:4px;font-family:'Roboto Mono',monospace}
+    .timezone-location{color:#5f6368;font-size:12px}
+
+    /* Main */
     .container{max-width:1100px;margin:0 auto;padding:24px}
     .header{text-align:center;margin:24px 0}
     .header h1{font-size:32px;font-weight:600}
@@ -38,6 +52,8 @@
     .cta-private{background:linear-gradient(45deg,#43b581,#4caf50)}
     .card-yes{background:#052e16;border-left:4px solid #00ff99;border-radius:8px;padding:12px;margin-top:8px}
     .card-no{background:#3f1d1d;border-left:4px solid #ff6b6b;border-radius:8px;padding:12px;margin-top:8px}
+
+    /* Resources */
     .resources{margin-top:28px;display:none}
     .resources h2{font-size:20px;margin-bottom:12px}
     .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px}
@@ -48,10 +64,27 @@
     .res-card a:hover{background:#1557b0}
     .res-locked{opacity:.6;filter:grayscale(1)}
     .res-locked .lock{color:#d33b01}
-    .footer{margin-top:40px;background:#1a73e8;color:#fff}
-    .footer-inner{max-width:1100px;margin:0 auto;padding:24px;text-align:center}
-    .muted a{color:#fff;opacity:.85;text-decoration:none}
-    .muted a:hover{opacity:1}
+
+    /* Footer (Hack University) */
+    .cc-blue{background:#1a73e8}
+    .footer{color:#fff;padding:32px 0 48px 0;margin-top:40px}
+    .footer-container{max-width:1200px;margin:0 auto;padding:0 20px}
+    .footer-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:24px;margin-bottom:32px}
+    .footer h3{font-size:18px;font-weight:500;margin-bottom:16px;color:#fff}
+    .footer p{font-size:14px;opacity:.9;margin-bottom:16px;line-height:1.5}
+    .footer ul{list-style:none;padding:0;margin:0}
+    .footer li{margin-bottom:8px}
+    .footer a{color:#fff;text-decoration:none;font-size:14px;opacity:.9;transition:opacity .2s ease}
+    .footer a:hover{opacity:1}
+    .social-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:16px}
+    .social-link{display:flex;flex-direction:column;align-items:center;color:#fff;text-decoration:none;padding:8px;transition:color .2s ease}
+    .social-link:hover{color:#fbbf24}
+    .social-link i{font-size:18px;margin-bottom:4px}
+    .social-link span{font-size:11px;text-align:center}
+    .footer-bottom{margin-top:32px;padding-top:24px;border-top:1px solid rgba(255,255,255,.2);text-align:center}
+    .footer-bottom p{font-size:14px;opacity:.9;margin-bottom:8px}
+    .footer-bottom .credits{font-size:12px;opacity:.85}
+
     @media (max-width:520px){.container{padding:16px}}
   </style>
 </head>
@@ -59,34 +92,69 @@
   <!-- NAV -->
   <nav class="navbar">
     <div class="nav-container">
-      <div class="nav-brand"><a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener">Code Crunch</a></div>
+      <div class="nav-brand">
+        <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener"><strong>Code Crunch</strong></a>
+      </div>
       <div class="nav-links">
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app">Home</a>
-        <a class="nav-link" href="#">Volunteer Wiki</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
+        <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
+        <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
+        <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
+        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
       </div>
     </div>
   </nav>
 
+  <!-- TIMEZONE BAND -->
+  <div class="timezone-section">
+    <div class="timezone-header">
+      <h2>🏆 Hackathon HQ</h2>
+    </div>
+    <div class="timezone-grid">
+      <div class="timezone-item">
+        <div class="timezone-flag">🇺🇸 - HQ</div>
+        <div class="timezone-time" id="miami-time">--:--:--</div>
+        <div class="timezone-location">Miami, FL (EST)</div>
+      </div>
+      <div class="timezone-item">
+        <div class="timezone-flag">🇪🇺</div>
+        <div class="timezone-time" id="london-time">--:--:--</div>
+        <div class="timezone-location">London (GMT)</div>
+      </div>
+      <div class="timezone-item">
+        <div class="timezone-flag">🌍</div>
+        <div class="timezone-time" id="lagos-time">--:--:--</div>
+        <div class="timezone-location">Lagos (WAT)</div>
+      </div>
+      <div class="timezone-item">
+        <div class="timezone-flag">🌏</div>
+        <div class="timezone-time" id="tokyo-time">--:--:--</div>
+        <div class="timezone-location">Tokyo (JST)</div>
+      </div>
+      <div class="timezone-item">
+        <div class="timezone-flag">🇦🇺</div>
+        <div class="timezone-time" id="sydney-time">--:--:--</div>
+        <div class="timezone-location">Sydney (AEDT)</div>
+      </div>
+      <div class="timezone-item">
+        <div class="timezone-flag">🇮🇳</div>
+        <div class="timezone-time" id="mumbai-time">--:--:--</div>
+        <div class="timezone-location">Mumbai (IST)</div>
+      </div>
+    </div>
+  </div>
+
   <main class="container">
-    <!-- Your copy -->
+    <!-- Header -->
     <section class="header">
       <h1>Volunteer Login</h1>
-      <p>
-         <p class="subtitle">Use the same email you confirmed with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
-        <!-- <br><br>
-        • Direct links to join Discord and verify private-channel access
-        <br>
-        <strong>Hack & Club Volunteer Login</strong> -->
+      <p class="subtitle">
+        Use the same email you confirmed with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
       </p>
-       
     </section>
 
     <!-- Login -->
     <section class="surface" id="volunteer-login">
-      <!-- <h2 class="title">Check Your Status</h2> -->
-      <!-- <p class="subtitle">Use the same email you confirmed with on <strong>Form No. 2</strong>.</p> -->
-
       <div class="helper">
         <strong>Accepted Volunteers Only:</strong> Access is restricted to current volunteers who have been accepted and completed Form No. 2.
       </div>
@@ -96,19 +164,17 @@
         <button class="btn btn-primary" onclick="checkOfficialVolunteerStatus()">Sign In</button>
       </div>
 
-            <div id="result">
-            <div class="info-box">
-                <strong>📋 What you'll have access to:</strong><br/>
-                • Link to join the official Discord server<br/>
-                • Steps to access the private volunteer channel<br/>
-                • Direct link to verify access to the private volunteer channel (all communications and updates are handled here)<br/>
-                • Event registration forms (all volunteers)<br/>
-                • Event registration response sheet (all volunteers)<br/>
-                • Hackathon judge evaluation forms (access available only to registered volunteers)<br/>
-                • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties)
-            </div>
-            </div>
-
+      <div id="result" style="margin-top:12px;">
+        <div class="info-box">
+          <strong>📋 What you'll have access to:</strong><br/>
+          • Link to join the official Discord server<br/>
+          • Steps to access the private volunteer channel<br/>
+          • Direct link to verify access to the private volunteer channel (all communications and updates are handled here)<br/>
+          • Event registration forms (all volunteers)<br/>
+          • Event registration response sheet (all volunteers)<br/>
+          • Hackathon judge evaluation forms (access available only to registered volunteers)<br/>
+          • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties)
+        </div>
         Awaiting email…
       </div>
     </section>
@@ -122,9 +188,9 @@
           <p>Access or verify volunteer participation certificates.</p>
           <a href="#" id="link-cert" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
-          <div class="res-card res-locked" id="card-expo">
+        <div class="res-card res-locked" id="card-expo">
           <h3><i class="fa-solid fa-file-lines"></i> Event Registration Forms <span class="lock">🔒</span></h3>
-          <p>Hack and Event registration forms.</p>
+          <p>Hack and event registration forms.</p>
           <a href="#" id="link-expo" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
         <div class="res-card res-locked" id="card-resp">
@@ -134,18 +200,65 @@
         </div>
         <div class="res-card res-locked" id="card-eval">
           <h3><i class="fa-solid fa-clipboard-check"></i> Hackathon Evaluation <span class="lock">🔒</span></h3>
-          <p>Judging evaluation forms [Access granted only to volunteers registered by each event]</p>
+          <p>Judging evaluation forms (access granted only to volunteers registered by each event).</p>
           <a href="#" id="link-eval" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
-
       </div>
     </section>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="footer-inner">
-      <div class="muted">© <span id="year"></span> Code Crunch • <a href="#">Privacy</a> • <a href="#">Terms</a></div>
+  <!-- FOOTER (Hack University) -->
+  <footer class="cc-blue footer">
+    <div class="footer-container">
+      <div class="footer-grid">
+        <div>
+          <h3>Hack University <span>👨🏻‍💻 👨🏼‍💻 👨🏽‍💻 👨🏾‍💻 👨🏿‍💻👩🏻‍💻 👩🏼‍💻 👩🏽‍💻 👩🏾‍💻 👩🏿‍💻🧑🏻‍💻 🧑🏼‍💻 🧑🏽‍💻 🧑🏾‍💻 🧑🏿‍💻</span></h3>
+          <p>
+            A collaborative effort uniting multiple student organizations and global communities with a mission to empower the next generation of innovators, developers, and leaders.
+          </p>
+          <p><a href="#">HackUniversity.vercel.app</a></p>
+
+          <div>
+            <h4 style="font-size:14px;font-weight:500;margin-bottom:12px;">Connect With Us:</h4>
+            <div class="social-grid">
+              <a href="#" class="social-link"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
+              <a href="#" class="social-link"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+              <a href="#" class="social-link"><i class="fab fa-github"></i><span>GitHub</span></a>
+              <a href="#" class="social-link"><i class="fab fa-youtube"></i><span>YouTube</span></a>
+              <a href="#" class="social-link"><i class="fab fa-discord"></i><span>Discord</span></a>
+              <a href="#" class="social-link"><i class="far fa-calendar-alt"></i><span>Calendar</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Mission</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Hackathons</a></li>
+            <li><a href="#">Membership</a></li>
+            <li><a href="#">Join E-Board</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Join Discord</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Contact</h3>
+          <div style="font-size:14px;opacity:.9;">
+            Miami, FL<br/>
+            <a href="mailto:codecrunchclub@gmail.com">codecrunchclub@gmail.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>© <span id="year"></span> Hack University. All rights reserved.</p>
+        <div class="credits">
+          Built with ❤️ for the tech community by <a href="#" target="_blank">Brian Bazurto</a> | Powered by innovation and collaboration
+        </div>
+      </div>
     </div>
   </footer>
 
@@ -159,7 +272,7 @@
     const USE_API_KEY = false;
     const API_KEY     = "REPLACE_WITH_SECURE";
 
-    // Optional fallbacks if API doesn't send a link (kept here but not required)
+    // Optional fallbacks if API doesn't send a link
     const RESOURCE_LINKS_FALLBACK = {
       certificates: "#",
       responses:    "#",
@@ -189,19 +302,13 @@
 
     // Apply resource links from API (with fallback)
     function applyResourceLinksFromAPI(entry) {
-      // API fields you return in Apps Script:
-      // certificatesLink, eventRegistrationResponseSheetLink, hackathonEvaluationFormsLink
       const cert = entry.certificatesLink || RESOURCE_LINKS_FALLBACK.certificates;
       const resp = entry.eventRegistrationResponseSheetLink || RESOURCE_LINKS_FALLBACK.responses;
       const evalL = entry.hackathonEvaluationFormsLink || RESOURCE_LINKS_FALLBACK.evaluation;
-
-      // If you later add expoFormsLink to the API, prefer it here:
       const expo = entry.expoFormsLink || RESOURCE_LINKS_FALLBACK.expo;
 
-      // Show section
       document.getElementById('resources').style.display = 'block';
 
-      // Map to cards/anchors
       const map = [
         { card: 'card-cert', link: 'link-cert', href: cert },
         { card: 'card-resp', link: 'link-resp', href: resp },
@@ -236,7 +343,7 @@
         const url = new URL(API_URL);
         url.searchParams.set('email', email);
         url.searchParams.set('referer', window.location.href);
-        url.searchParams.set('details', '0'); // keep payload lean
+        url.searchParams.set('details', '0');
         if (USE_API_KEY) url.searchParams.set('key', API_KEY);
 
         const resp = await fetch(url.toString());
@@ -248,11 +355,9 @@
         let html = infoBoxHTML() + `<strong>Login for 📧 <span style="color:#fff">${email}</span>:</strong><br/>`;
 
         if (data.length > 0 && data[0].status && data[0].status !== "No entry") {
-          // VERIFIED
           data.forEach(entry => {
-            // Discord CTAs using API links
             if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
-              html += `<div class="card-welcome">
+              html += `<div class="card-wwelcome card-welcome">
                         <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
                         <div class="cta">
                           <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">🚀 JOIN DISCORD SERVER</a>
@@ -265,7 +370,6 @@
                       `</div>`;
             }
 
-            // Confirm card
             html += `<div class="card-yes">
                       <strong>✅ Confirmed Volunteer</strong><br/>
                       • Status: ${entry.status}<br/>
@@ -277,14 +381,12 @@
                       (entry?.basicInfo?.githubProfile && entry.basicInfo.githubProfile!=="Not available" ? `• GitHub: <a href="${entry.basicInfo.githubProfile}" target="_blank" style="color:#00ff99;">${entry.basicInfo.githubProfile}</a><br/>` : '') +
                     `</div>`;
 
-            // 🔓 Unlock resources using links from the API
             applyResourceLinksFromAPI(entry);
           });
 
           resultDiv.innerHTML = html;
 
         } else {
-          // NOT VERIFIED
           html += `<div class="card-no">
                     <strong>❌ Access Denied</strong><br/>
                     • We could not find a confirmed Form-2 entry for this email.<br/>
@@ -298,6 +400,32 @@
         resultDiv.innerHTML = infoBoxHTML() + '❌ Network error. Please try again later.';
       }
     }
+
+    // Live time updates for the timezone band
+    function updateTimes() {
+      const now = new Date();
+      const set = (id, tz) => {
+        const t = new Date(now.toLocaleString("en-US",{timeZone:tz}));
+        const hh = String(t.getHours()).padStart(2,'0');
+        const mm = String(t.getMinutes()).padStart(2,'0');
+        const ss = String(t.getSeconds()).padStart(2,'0');
+        const out = `${hh}:${mm}:${ss}`;
+        const el = document.getElementById(id);
+        if (el) el.textContent = out;
+      };
+      set('miami-time',"America/New_York");
+      set('london-time',"Europe/London");
+      set('lagos-time',"Africa/Lagos");
+      set('tokyo-time',"Asia/Tokyo");
+      set('sydney-time',"Australia/Sydney");
+      set('mumbai-time',"Asia/Kolkata");
+    }
+
+    // Init
+    document.addEventListener('DOMContentLoaded', () => {
+      updateTimes();
+      setInterval(updateTimes, 1000);
+    });
 
     // Enter to submit
     document.getElementById('emailInput').addEventListener('keypress',(e)=>{
