--- a/hackathonvolunteer-login copy.html
+++ b/hackathonvolunteer-login copy.html
@@ -333,7 +333,7 @@
       <div class="faq-container">
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>How long after an event are certificates available?</span>
             <span class="faq-arrow">▼</span>
           </button>
