--- a/hackathonvolunteer-login copy.html
+++ b/hackathonvolunteer-login copy.html
@@ -344,7 +344,7 @@
 
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>What if my email address has changed since the event?</span>
             <span class="faq-arrow">▼</span>
           </button>
@@ -355,7 +355,7 @@
 
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>Are these certificates officially recognized?</span>
             <span class="faq-arrow">▼</span>
           </button>
@@ -366,7 +366,7 @@
 
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>Can I update my name on the certificate?</span>
             <span class="faq-arrow">▼</span>
           </button>
@@ -377,7 +377,7 @@
 
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>What format are the certificates in?</span>
             <span class="faq-arrow">▼</span>
           </button>
@@ -388,7 +388,7 @@
 
         <div class="faq-item">
           <button class="faq-question" onclick="toggleFAQ(this)">
-            <span class="faq-icon">?</span>
+            <span class="faq-arrow">▼</span>
             <span>I don't see my participation record. What should I do?</span>
             <span class="faq-arrow">▼</span>
           </button>
