--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -185,15 +185,15 @@
           <small>Open certificate portal</small>
         </a>
 
-      <div class="portal-grid">
+    
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305-fall2025.html">
           <span>🏆 305 Hackathon Edition — Fall 2025</span>
-          <small>Open certificate portal</small>
+          <small>Open certificate portal - Comming Soon</small>
         </a>
 
         <a class="portal-btn" href="#">
           <span>💪 EmpowHer Hack — Fall 2025</span>
-          <small>Open certificate portal</small>
+          <small>Open certificate portal- Comming Soon</small>
         </a>
 
         <a class="portal-btn" href="#">
