--- a/hackathonvolunteer-login copy.html
+++ b/hackathonvolunteer-login copy.html
@@ -268,7 +268,7 @@
 
     // ====== CONFIG ======
     const ALLOWED_HOST = "codecrunchglobal.vercel.app"; // <- set to your live domain
-    const API_URL = "https://script.google.com/macros/s/REPLACE_WITH_YOUR_DEPLOYMENT_ID/exec"; // <- your Apps Script web app URL
+      const API_URL = "https://script.google.com/macros/s/AKfycbyWbt4hJCTs2PPAfJzQh-DxyeojXyiZ_xrHPoP5pr4rfEoIr_LvpJHf_Yz9GjyZjZNReA/exec";
     const USE_API_KEY = false;
     const API_KEY     = "REPLACE_WITH_SECURE";
 
