--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -277,7 +277,7 @@
       certificates: "#",
       responses:    "#",
       evaluation:   "#",
-      expo:         "#"
+      registration:         "#"
     };
 
     // Prefill email from ?email=
@@ -306,7 +306,7 @@
       const resp = entry.eventRegistrationResponseSheetLink || RESOURCE_LINKS_FALLBACK.responses;
       const evalL = entry.hackathonEvaluationFormsLink || RESOURCE_LINKS_FALLBACK.evaluation;
       // ✅ fix: use eventRegistrationLink (optionally fall back to expoFormsLink if you had an older version)
-      const reg   = entry.eventRegistrationLink || entry.expoFormsLink || RESOURCE_LINKS_FALLBACK.expo;
+      const reg   = entry.eventRegistrationLink || RESOURCE_LINKS_FALLBACK.registration;
 
       document.getElementById('resources').style.display = 'block';
 
@@ -314,7 +314,7 @@
         { card: 'card-cert', link: 'link-cert', href: cert },
         { card: 'card-resp', link: 'link-resp', href: resp },
         { card: 'card-eval', link: 'link-eval', href: evalL },
-        { card: 'card-expo', link: 'link-expo', href: expo } // ← this is the “Event Registration Forms → Open” button
+        { card: 'card-expo', link: 'link-expo', href: reg } // ← this is the “Event Registration Forms → Open” button
       ];
 
       map.forEach(({card, link, href}) => {
