--- a/hackuniversity-calendar.html
+++ b/hackuniversity-calendar.html
@@ -125,7 +125,7 @@
             <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Live Calendar View</h2>
             <div class="flex justify-center">
                 <iframe
-                src="https://calendar.google.com/calendar/u/0?cid=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
+                src="https://calendar.google.com/calendar/embed?src=84c4d650450597c592e74e8f5fe851301f60a92f30bb593680999781dfacab12%40group.calendar.google.com&ctz=America%2FNew_York"
                 class="calendar-iframe"
                 frameborder="0"
                 scrolling="no">
