--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -437,7 +437,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">EmpowHER 2025</a>
+        <a class="navbar-brand" href="#">EmpowHER 2025 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -458,10 +458,19 @@
 
 <!-- Hackathon Details -->
 <section id="about" class="content-section">
-    <h2>💜 EmpowHER Hackathon 2025</h2>
-    <p style="font-size: 1.2rem; text-align: center; margin-bottom: 2rem; line-height: 1.6; color: #e0e0ff;">
-        Empowering women in technology through innovation, ethical AI, and blockchain solutions. Join us for a week of coding, collaboration, and creating positive change! 💪✨
-    </p>
+    <h2>EmpowHER Hackathon 2025 <span aria-hidden="true">💜</span></h2>
+    <p style="text-align:center; margin: 0 0 1rem;">
+        <a class="link-pill" href="https://empowherhack2025.vercel.app" target="_blank" rel="noopener noreferrer">
+            <i class="fa-solid fa-up-right-from-square"></i> empowherhack2025.vercel.app
+        </a>
+        </p>
+        <p style="font-size:1.2rem; text-align:center; margin-bottom:2rem; line-height:1.6; color:#e0e0ff;">
+        Empowering students in technology through innovation, ethical AI, and blockchain solutions. 
+        Join us for a week of coding, collaboration, and creating positive change! 
+        🌐 Open worldwide — all universities, all majors, and high school students (16+). 
+        We especially encourage women and non-binary participants to join, and welcome allies from all backgrounds.
+        </p>
+
     
     <div style="margin: 3rem 0; background: rgba(102, 126, 234, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.3);">
         <h3 style="color: #667eea; text-align: center; margin-bottom: 1.5rem; font-size: 1.5rem;">🌟 THEME: Women in Tech, Ethical AI & Blockchain</h3>
@@ -525,7 +534,7 @@
             <em>Hackathons</em> and complete the One Stop Form.
             <br>
             <a class="pill" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-external-link-alt"></i> Open Hack University
+              <i class="fas fa-external-link-alt"></i> Open Hack University [HackUniversity.vercel.app]
             </a>
           </div>
         </li>
@@ -536,7 +545,7 @@
             Get your ticket on the <strong>Bevy calendar</strong>.
             <br>
             <a class="pill" href="https://empowherhack2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-ticket-alt"></i> Open Bevy Calendar
+              <i class="fas fa-ticket-alt"></i> Open Bevy Calendar [EmpowHERhack2025-bevy.vercel.app]
             </a>
           </div>
         </li>
@@ -548,7 +557,7 @@
             <span style="opacity:.85;">[only for In-person events]</span>.
             <br>
             <a class="pill" href="#" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-id-badge"></i> Check-in Info
+              <i class="fas fa-id-badge"></i> Check-in Info [Not available for this event]
             </a>
           </div>
         </li>
@@ -560,7 +569,7 @@
             <span style="opacity:.85;">(Project Submission Portal)</span>.
             <br>
             <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-rocket"></i> Open Devpost Portal
+              <i class="fas fa-rocket"></i> Open Devpost Portal [EmpowHERhack2025-devpost.vercel.app]
             </a>
           </div>
         </li>
