--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -533,8 +533,10 @@
             Register with <strong>OneStopForm</strong> → go to <strong>Hack University</strong> → 
             <em>Hackathons</em> and complete the One Stop Form.
             <br>
+                [ HackUniversity.vercel.app]
+            <br>
             <a class="pill" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-external-link-alt"></i> Open Hack University [HackUniversity.vercel.app]
+              <i class="fas fa-external-link-alt"></i> Open Hack University 
             </a>
           </div>
         </li>
@@ -544,8 +546,10 @@
           <div class="step-text">
             Get your ticket on the <strong>Bevy calendar</strong>.
             <br>
+                [ EmpowHERhack2025-bevy.vercel.app ]
+            <br>
             <a class="pill" href="https://empowherhack2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-ticket-alt"></i> Open Bevy Calendar [EmpowHERhack2025-bevy.vercel.app]
+              <i class="fas fa-ticket-alt"></i> Open Bevy Calendar 
             </a>
           </div>
         </li>
@@ -556,8 +560,10 @@
             <strong>Check in with Staff</strong> 
             <span style="opacity:.85;">[only for In-person events]</span>.
             <br>
+                [Not available for this event]
+            <br>
             <a class="pill" href="#" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-id-badge"></i> Check-in Info [Not available for this event]
+              <i class="fas fa-id-badge"></i> Check-in Info 
             </a>
           </div>
         </li>
@@ -568,8 +574,10 @@
             Register on <strong>Devpost</strong> 
             <span style="opacity:.85;">(Project Submission Portal)</span>.
             <br>
+                [ EmpowHERhack2025-devpost.vercel.app ]
+            <br>
             <a class="pill" href="https://empowherhack2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-rocket"></i> Open Devpost Portal [EmpowHERhack2025-devpost.vercel.app]
+              <i class="fas fa-rocket"></i> Open Devpost Portal 
             </a>
           </div>
         </li>
@@ -584,12 +592,18 @@
       <div class="resource-list">
         <div class="resource-item">
           <strong>Hack Agenda:</strong>
+            <br>
+                [ EmpowHERhack2025-agenda.vercel.app ]
+            <br>
           <a href="https://EmpowHERHack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer">
             EmpowHER 2025 Agenda
           </a>
         </div>
         <div class="resource-item">
           <strong>Hack Guide:</strong>
+        <br>
+                [ hackuniversity-HackerGuide.vercel.app ]
+            <br>
           <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" rel="noopener noreferrer">
             Hacker Guide &amp; Toolkit
           </a>
