--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -595,7 +595,7 @@
             <br>
                 [ EmpowHERhack2025-agenda.vercel.app ]
             <br>
-          <a href="https://EmpowHERHack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer">
+          <a href="https://EmpowHERHack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
             EmpowHER 2025 Agenda
           </a>
         </div>
@@ -604,7 +604,7 @@
         <br>
                 [ hackuniversity-HackerGuide.vercel.app ]
             <br>
-          <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" rel="noopener noreferrer">
+          <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-up-right-from-square"></i>
             Hacker Guide &amp; Toolkit
           </a>
         </div>
