--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -461,7 +461,7 @@
     <h2>EmpowHER Hackathon 2025 <span aria-hidden="true">💜</span></h2>
     <p style="text-align:center; margin: 0 0 1rem;">
         <a class="link-pill" href="https://empowherhack2025.vercel.app" target="_blank" rel="noopener noreferrer">
-            <i class="fa-solid fa-up-right-from-square"></i> empowherhack2025.vercel.app
+            <i class="fa-solid fa-up-right-from-square"></i> EmpowHerHack2025.vercel.app
         </a>
         </p>
         <p style="font-size:1.2rem; text-align:center; margin-bottom:2rem; line-height:1.6; color:#e0e0ff;">
